# AtlasPI

./: .dockerignore  .env.example  .gitignore  .zenodo.json  ACKNOWLEDGMENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  NOTICE  Procfile  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt  run.py
.claude/: launch.json
.github/ISSUE_TEMPLATE/: boundary-correction.md  bug-report.md  config.yml
.github/workflows/: ci.yml  deploy.yml  publish-mcp.yml  publish-sdk-npm.yml  publish-sdk-python.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_boundary_provenance.py  003_historical_events.py  004_postgis_indexes.py  005_cities_and_routes.py  006_dynasty_chains.py  007_api_request_logs.py  008_date_precision.py  009_ai_suggestions.py  010_historical_periods.py  011_archaeological_sites.py  012_historical_rulers.py  013_historical_languages.py  014_known_dev_ips.py  015_wikidata_qid.py  016_capital_history.py  017_composite_index_entities.py  018_pg_trgm_fuzzy_search.py
data/: atlaspi.db-shm  atlaspi.db-wal  validation_report.txt
data/chains/: batch_01_major_chains.json  batch_02_more_chains.json  batch_03_asia.json  batch_04_china.json  batch_05_islamic_central_lands.json  batch_06_korea.json  batch_07_western_roman_continuity.json  batch_08_eastern_roman_continuity.json  batch_09_mongol_yuan.json  batch_10_persian_deep_trunk.json  batch_11_indian_medieval_trunk.json  batch_12_japanese_deep_trunk.json  batch_13_mongol_khanates.json  batch_14_ethiopian_trunk.json  batch_15_west_african.json  batch_16_andean.json  batch_17_mesoamerican.json  batch_18_iberian.json  batch_19_scandinavian.json  batch_20_balkan.json  batch_21_nile_valley_ethiopia.json  batch_21_vietnamese.json  batch_22_ancient_near_east_branches.json  batch_22_maghreb.json  batch_23_british_isles.json  batch_23_inner_asian_steppe.json  batch_24_germanic_italian.json  batch_24_indian_subcontinent.json  batch_25_polish_lithuanian.json  batch_26_swahili.json  batch_27_french_russian.json  batch_28_javanese.json  batch_29_west_african_extras.json  batch_30_ancient_mesopotamian.json  batch_31_native_american.json  batch_32_southeast_asia_early.json
data/cities/: batch_01_mediterranean_mena.json  batch_02_asia.json  batch_03_americas_africa_europe.json
data/entities/: batch_00_original.json  batch_01_europe.json  batch_02_asia.json  batch_03_africa_mideast.json  batch_04_americas.json  batch_05_modern.json  batch_06_ancient.json  batch_07_oceania_pacific.json  batch_08_central_asia.json  batch_09_southeast_asia.json  (+28 more)
docs/: API.md  DEPLOYMENT.md  METHODOLOGY.md  OPERATIONS.md  TEMPLATES.md  boundary_audit_2026_04_15.md  boundary_coverage_report.md  design-proposal-stories-mode.md  github-release-v6.33.md  outreach-draft.md  paper-draft.md  reddit-drafts.md
handoff/: 01-visual-spec.md  02-claude-code-prompt.md  03-qa-checklist.md  README.md
hf-dataset/: README.md  prepare_export.py
mcp-server/: .gitignore  LICENSE  PUBLISH.md  README.md  pyproject.toml
mcp-server/src/atlaspi_mcp/: __init__.py  __main__.py  client.py  server.py  tools.py
mcp-server/tests/: test_tools.py
scripts/: README.md  __init__.py  ai_cofounder_analyze.py  apply_data_patch.py  backup.sh  cities_fk_backfill.sql  daily_ai_check.sh  detect_script_lang_mismatch.py  diagnose_dataset.py  fetch_raw_data.sh  fix_displaced_in_json.py  fix_missing_location.py  fix_missing_main_actor.py  fix_script_lang_via_wikidata.py  fix_status_coherence.py  generate_daily_brief.py  implement_accepted_suggestions.py  insert_missing_entities.sql  merge_duplicate_entities.sql  nightly_drift_check.sh  populate_capital_history.sql  populate_date_fields.py  restore.sh  sites_fk_backfill.sql  sites_fk_backfill_v2.sql  sites_fk_nearest_fallback.sql  smoke_test.sh  smoke_test_endpoints.py  split_bundled_entities.sql  wikidata_bootstrap.py  wikidata_drift_check.py
sdk-js/: README.md  package.json  tsconfig.json
sdk-python/: README.md  pyproject.toml
sdk-python/src/atlaspi/: __init__.py  client.py
src/: cache.py  config.py  logging_config.py  main.py  monitoring.py
static/: about.html  app.js  embed.html  faq.html  index.html  llms.txt  robots.txt  sitemap.xml  style.css
tests/: conftest.py  test_advanced_api.py  test_api_edge_cases.py  test_boundary_match_geographic_guard.py  test_boundary_provenance.py  test_boundary_provenance_audit.py  test_confidence.py  test_data_quality.py  test_database.py  test_date_coverage.py  test_entities.py  test_ethics.py  test_ethics_006_audit.py  test_export.py  test_health.py  test_performance.py  test_relations.py  test_security.py  test_similarity.py  test_spotcheck_top10.py  test_stats_events.py  test_sync_boundaries.py  test_v56_features.py  test_v57_features.py  test_v58_features.py  test_v5_features.py  test_v6100_chain_expansion.py  test_v6110_imperial_chains.py  test_v6120_analytics.py  test_v6130_persian_indian.py  test_v614_date_precision.py  test_v615_insights.py  test_v616_cofounder.py  test_v617_timeline.py  test_v618_compare.py  test_v619_search_export.py  test_v61_features.py  test_v620_docs.py  test_v621_cache.py  test_v622_widgets.py  (+33 more)
(+225 files in other folders)
