[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlaspi-client"
version = "0.2.0"
description = "Official Python client for the AtlasPI Historical Geography API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "AtlasPI Project", email = "info@cra-srl.com" }
]
keywords = [
    "atlaspi",
    "historical-geography",
    "history",
    "geojson",
    "ai-agents",
    "mcp",
    "boundaries",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
async = []  # httpx already supports both

[project.urls]
Homepage = "https://atlaspi.cra-srl.com"
Repository = "https://github.com/Soil911/AtlasPI"
Issues = "https://github.com/Soil911/AtlasPI/issues"
Documentation = "https://atlaspi.cra-srl.com/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
atlaspi = ["py.typed"]
